--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 aiohttp==3.7.3
 aiohttp-apispec==2.2.1
+aioresponses==0.7.1
 alembic==1.5.4
 apispec==3.3.2
 appdirs==1.4.4
@@ -10,6 +11,7 @@ black==20.8b1
 chardet==3.0.4
 click==7.1.2
 coverage==5.4
+freezegun==1.1.0
 gino==1.0.1
 idna==3.1
 iniconfig==1.1.1
@@ -28,6 +30,7 @@ pyparsing==2.4.7
 pytest==6.2.2
 pytest-aiohttp==0.3.0
 pytest-cov==2.11.1
+pytest-freezegun==0.4.2
 pytest-mock==3.5.1
 python-dateutil==2.8.1
 python-editor==1.0.4
