--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
+aio-pika==6.8.0
 aiohttp==3.7.3
 aiohttp-apispec==2.2.1
 aioresponses==0.7.1
+aiormq==3.3.1
 alembic==1.5.4
 apispec==3.3.2
 appdirs==1.4.4
@@ -22,6 +24,7 @@ marshmallow==3.10.0
 multidict==5.1.0
 mypy-extensions==0.4.3
 packaging==20.9
+pamqp==2.3.0
 pathspec==0.8.1
 pluggy==0.13.1
 psycopg2-binary==2.8.6
